[tool.poetry]
name = "shostner"
version = "0.1.0"
description = ""
authors = ["jlugao <joaolhullier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.59.0"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
