[tool.poetry]
name = "shostner"
version = "0.1.0"
description = ""
authors = ["jlugao <joaolhullier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.59.0"
uvicorn = "^0.11.5"
motor = "^2.1.0"
email-validator = "^1.1.1"
python-jose = "^3.2.0"
cryptography = "^3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-bdd = "^3.4.0"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
